// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`coordinates > degrees minutes seconds > directions delimeters: 40° 41' 21.2892" N 74° 02' 40.2066" W 1`] = `
[
  "",
  "",
  "40",
  "41",
  "21",
  ".2892",
  "N",
  "",
  "",
  "74",
  "02",
  "40",
  ".2066",
  "W",
]
`;

exports[`coordinates > degrees minutes seconds > directions no delimeters: 40 41 21.2892 N 74 02 40.2066 W 1`] = `
[
  "",
  "",
  "40",
  "41",
  "21",
  ".2892",
  "N",
  "",
  "",
  "74",
  "02",
  "40",
  ".2066",
  "W",
]
`;

exports[`coordinates > degrees minutes seconds > partial delimeters: 40° 41' -74 02' 1`] = `
[
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
]
`;

exports[`coordinates > degrees minutes seconds > partial no delimeters: 40 41 -74 02 1`] = `
[
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
]
`;

exports[`coordinates > degrees minutes seconds > plus minus delimeters: +40° 41' 21.2892" -74° 02' 40.2066" 1`] = `
[
  "",
  "+",
  "40",
  "41",
  "21",
  ".2892",
  "",
  "",
  "-",
  "74",
  "02",
  "40",
  ".2066",
  "",
]
`;

exports[`coordinates > degrees minutes seconds > plus minus no delimeters: +40 41 21.2892 -74 02 40.2066 1`] = `
[
  "",
  "+",
  "40",
  "41",
  "21",
  ".2892",
  "",
  "",
  "-",
  "74",
  "02",
  "40",
  ".2066",
  "",
]
`;

exports[`coordinates > degrees minutes seconds > separator ,: 40° 41' 21.2892",-74° 02' 40.2066" 1`] = `
[
  "",
  "",
  "40",
  "41",
  "21",
  ".2892",
  "",
  "",
  "-",
  "74",
  "02",
  "40",
  ".2066",
  "",
]
`;

exports[`coordinates > degrees minutes seconds > separator /: 40° 41' 21.2892"/-74° 02' 40.2066" 1`] = `
[
  "",
  "",
  "40",
  "41",
  "21",
  ".2892",
  "",
  "",
  "-",
  "74",
  "02",
  "40",
  ".2066",
  "",
]
`;

exports[`coordinates > degrees minutes seconds > separator space: 40° 41' 21.2892" -74° 02' 40.2066" 1`] = `
[
  "",
  "",
  "40",
  "41",
  "21",
  ".2892",
  "",
  "",
  "-",
  "74",
  "02",
  "40",
  ".2066",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > NSEW directions prefix no space: N40.689247, W74.044502 1`] = `
[
  "N",
  "",
  "40",
  ".689247",
  "",
  "W",
  "",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > NSEW directions prefix: N 40.689247, W 74.044502 1`] = `
[
  "N",
  "",
  "40",
  ".689247",
  "",
  "W",
  "",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > NSEW directions suffix no space: 40.689247N, 74.044502W 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "N",
  "",
  "",
  "74",
  ".044502",
  "W",
]
`;

exports[`coordinates > matching > decimal degrees > NSEW directions suffix: 40.689247 N, 74.044502 W 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "N",
  "",
  "",
  "74",
  ".044502",
  "W",
]
`;

exports[`coordinates > matching > decimal degrees > degree delimeters: 40.689247° N, 74.044502° W 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "N",
  "",
  "",
  "74",
  ".044502",
  "W",
]
`;

exports[`coordinates > matching > decimal degrees > inferred plus: 40.689247, -74.044502 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "",
  "",
  "-",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > inferred positive direction: 40.689247, 74.044502 W 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "",
  "",
  "",
  "74",
  ".044502",
  "W",
]
`;

exports[`coordinates > matching > decimal degrees > mixed full and partial: 40.689247, W74 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "",
  "W",
  "",
  "74",
  undefined,
  "",
]
`;

exports[`coordinates > matching > decimal degrees > mixed plus minus and directions: +40.689247, W74.044502 1`] = `
[
  "",
  "+",
  "40",
  ".689247",
  "",
  "W",
  "",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > odd whitespace:  + 40.689247  ,   -  74.044502     1`] = `
[
  "",
  "+",
  "40",
  ".689247",
  "",
  "",
  "-",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > partial directions prefix no space: N40, W74 1`] = `
[
  "N",
  "",
  "40",
  undefined,
  "",
  "W",
  "",
  "74",
  undefined,
  "",
]
`;

exports[`coordinates > matching > decimal degrees > partial directions prefix: N 40, W 74 1`] = `
[
  "N",
  "",
  "40",
  undefined,
  "",
  "W",
  "",
  "74",
  undefined,
  "",
]
`;

exports[`coordinates > matching > decimal degrees > partial directions suffix no space: 40N, 74W 1`] = `
[
  "",
  "",
  "40",
  undefined,
  "N",
  "",
  "",
  "74",
  undefined,
  "W",
]
`;

exports[`coordinates > matching > decimal degrees > partial directions suffix: 40 N, 74 W 1`] = `
[
  "",
  "",
  "40",
  undefined,
  "N",
  "",
  "",
  "74",
  undefined,
  "W",
]
`;

exports[`coordinates > matching > decimal degrees > partial: 40, -74 1`] = `
[
  "",
  "",
  "40",
  undefined,
  "",
  "",
  "-",
  "74",
  undefined,
  "",
]
`;

exports[`coordinates > matching > decimal degrees > plus minus: +40.689247, -74.044502 1`] = `
[
  "",
  "+",
  "40",
  ".689247",
  "",
  "",
  "-",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > separator ,: 40.689247,-74.044502 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "",
  "",
  "-",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > separator /: 40.689247/-74.044502 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "",
  "",
  "-",
  "74",
  ".044502",
  "",
]
`;

exports[`coordinates > matching > decimal degrees > separator space: 40.689247 -74.044502 1`] = `
[
  "",
  "",
  "40",
  ".689247",
  "",
  "",
  "-",
  "74",
  ".044502",
  "",
]
`;
